# text-analysis

api/: Cargo.toml  README.md
api/morphological_analysis/: Cargo.toml
api/morphological_analysis/src/: lib.rs
api/morphological_analysis/src/domain/: noun.rs  token.rs
api/morphological_analysis/src/server/: handler.rs  mod.rs  response.rs
api/morphological_analysis/src/usecase/: text_toknizer.rs
api/src/: main.rs
bff/: Makefile  go.mod  go.sum  main.go
bff/config/: config.go
bff/di/: wire_gen.go
bff/driver/: http_client.go
bff/port/: noun.go
bff/use_case/: noun.go  noun_test.go
enviroments/api/docker/: Dockerfile  build_and_push.sh
enviroments/api/helm/: Chart.yaml  values.yaml
enviroments/bff/docker/: Dockerfile  build_and_push.sh
enviroments/bff/helm/: Chart.yaml  values.yaml
enviroments/web/docker/: Dockerfile  build_and_push.sh
enviroments/web/helm/: Chart.yaml  values.yaml
text-analysis-api/: .gitignore
text-analysis-api/morphological_analysis/: Cargo.toml
text-analysis-api/morphological_analysis/src/: lib.rs
text-analysis-bff/: Makefile
text-analysis-bff/di/: wire.go
text-analysis-bff/driver/: text_analysis_api.go
text-analysis-bff/rest/handler/: noun.go  systems.go
text-analysis-bff/rest/server/: router.go  server.go
text-analysis-bff/types/: noun.go  types.go
text-analysis-web/: .eslintrc.js  nuxt.config.ts  package.json
web/: .env.development  nuxt.config.ts  package.json
web/components/: NounsTable.vue
web/components/atoms/: input.vue
web/gateway/: getCountsByNoun.ts
web/pages/: index.vue
(+8 files in other folders)
