[package]
name = "morphological_analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.15"
hyper = { version = "0.14.20", features = ["full"] }
itertools = "0.10.3"
lindera = "0.14.0"
mry = "0.2.5"
serde = "1.0.144"
serde_json = "1.0.85"
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.36"
